--- a/help/joboptions.wiki
+++ b/help/joboptions.wiki
@@ -59,10 +59,18 @@ running untill all jobs are finished. it will output some progress, but
 you can get more info by updating and checking the log file.
 
 === grid engine distribution ===
+There are two ways to distribute jobs on a sge cluster:
 Using "**-d sge**" the submitting command will submit all jobs to the Grid
 Engine as grid engine jobs with proper dependencies between the jobs. The
 program itself will stop when all jobs are submitted. You can check
 progress/errors by updating and checking the logfile.
+
+Some clusters limit the number of submitted jobs you can have. As the previous
+method may submit 1000s of jobs, this cannot be used on such cluster. You
+can use an alternative method by specifying the options -d <number> -dsubmit sge
+This method will submit a maximum of <number> jobs at a time, managing part of
+the job management itself. Using this method, the submit command will stay running
+for the entire time.
 
 Some tools request multiple cores/slots for one job on a grid engine cluster
 using the parallel environment (pe) local (using -pe local <nr of slots> -R y).
@@ -90,6 +98,9 @@ Using "**-d slurm**" the submitting command will submit all jobs to slurm
 with proper dependencies between the jobs. The program itself will stop
 when all jobs are submitted. You can check progress/errors by updating and
 checking the logfile.
+
+The alternate submision method (with a limit of concurrently submitted jobs)
+can also be used with slurm by specifying the options -d <number> -dsubmit slurm.
 
 == Options ==
 List of all options supported by job enabled commands:
