--- a/lib/cg_samcat.wiki
+++ b/lib/cg_samcat.wiki
@@ -10,6 +10,6 @@ concatenates sam files outputting to stdout.
 ; **samfile**: file to be concatenated
 
 == Category ==
-Convenience
+Conversion
 
 
